# experiments

./: LICENSE  README.md
devnotes/: README.md  package-lock.json  package.json  schema.sql  svelte.config.js  tailwind.config.cjs  wrangler.toml
devnotes/src/: app.d.ts  hooks.server.ts
devnotes/src/lib/: types.ts
devnotes/src/lib/components/: TopNavigation.svelte
devnotes/src/lib/hooks/: firewall.ts  user.ts
devnotes/src/lib/server/: database.ts  notes.ts
devnotes/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
devnotes/src/routes/notes/: +page.server.ts  +page.svelte
devnotes/src/routes/signin/: +page.server.ts
devnotes/src/routes/signout/: +page.server.ts
flask-with-poetry/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
flask-with-poetry/app/: __init__.py
wrangler-cloudflare-workers/: README.md  package-lock.json  package.json  wrangler.toml
wrangler-cloudflare-workers/src/: index.ts
wrangler-cloudflare-workers/test/: index.spec.ts
