[tool.poetry]
name = "flask-with-poetry"
version = "0.1.0"
description = ""
authors = ["Oskari Pöntinen <mail.morko@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
redis = "^5.0.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
flake8-bugbear = "^24.4.26"
flake8-annotations = "^3.1.1"
pep8-naming = "^0.14.1"
flake8-black = "^0.3.6"
dlint = "^0.14.1"
isort = "^5.13.2"
flake8-isort = "^6.1.1"

[tool.isort]
profile = "black"